# cpp-app-30x

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  config.json  parking-compose.yml  parking_app.yml
config_files/: config.json  parking.yaml
dockerfiles/: Dockerfile-base  DockerfileApp  DockerfileBase  DockerfileDev
models/: se_resnext50.np
src/: Config.cpp  Config.h  ILogger.cpp  ILogger.h  Main.cpp  RandomStringGenerator.cpp
src/app/: BaseCarTracker.cpp  BaseCarTracker.h  CalibParams.cpp  CalibParams.h  CameraScope.cpp  CameraScope.h  Car.cpp  Car.h  Constants.h  Counter.h  Detection.cpp  Detection.h  DetectionEngine.cpp  DetectionEngine.h  DetectionService.cpp  DetectionService.h  LPRecognizer.cpp  LPRecognizer.h  LPRecognizerService.cpp  LPRecognizerService.h  LicensePlate.cpp  LicensePlate.h  MaskCarTracker.cpp  MaskCarTracker.h  Package.cpp  Package.h  PackageSender.cpp  PackageSender.h  S3Scope.cpp  S3Scope.h  SensorCarTracker.cpp  SensorCarTracker.h  Snapshot.cpp  Snapshot.h  SnapshotSender.cpp  SnapshotSender.h  TemplateMatching.h  Utils.cpp  Utils.h
src/car_model/: CarModelRecognizer.cpp  CarModelRecognizer.h  Labels.h  MobilenetEngine.cpp  MobilenetEngine.h  ResnetEngine.cpp  ResnetEngine.h
src/client/: CameraClientLauncher.cpp  CameraClientLauncher.h  DahuaSettingsUpdater.cpp  DahuaSettingsUpdater.h  FrameData.cpp  GstreamerReader.cpp  GstreamerReader.h  Sensor.cpp  Sensor.h  SensorCameraTrigger.cpp  SensorCameraTrigger.h  SensorClientLauncher.cpp  SensorClientLauncher.h
src/zeromq/: zmq.hpp  zmq_addon.hpp
